--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.7.0",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
